--- a/index.html
+++ b/index.html
@@ -59,16 +59,237 @@
 
     <main>
       <section id="sponsor">
-        <img src="./logos/Alibaba.svg" alt="">
-        <img src="./logos/Amazon.svg" alt="">
-        <img src="./logos/Daraz.pk Logo.svg" alt="">
-        <img src="./logos/Ebay.svg" alt="">
-        <img src="./logos/Rakuten.svg" alt="">
-        <img src="./logos/Walmart.svg" alt="">
-        <img src="./logos/Target.svg" alt="">
+        <img src="./logos/Alibaba.svg" alt="" />
+        <img src="./logos/Amazon.svg" alt="" />
+        <img src="./logos/Daraz.pk Logo.svg" alt="" />
+        <img src="./logos/Ebay.svg" alt="" />
+        <img src="./logos/Rakuten.svg" alt="" />
+        <img src="./logos/Walmart.svg" alt="" />
+        <img src="./logos/Target.svg" alt="" />
+      </section>
+
+      <section id="collection">
+        <h1>Popular Collection</h1>
+
+        <div class="card-container">
+          <div class="card">
+            <img src="./images/tripod.png" alt="" />
+            <h3>Flex Tripod</h3>
+
+            <p class="price">$50.48</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/mic.png" alt="" />
+            <h3>Microphone</h3>
+
+            <p class="price">$120.25</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/airpod.png" alt="" />
+            <h3>Airbuds</h3>
+
+            <p class="price">$100.00</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/drone.png" alt="" />
+            <h3>Drone</h3>
+
+            <p class="price">$980.25</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/lights.png" alt="" />
+            <h3>Light Setup</h3>
+
+            <p class="price">$1200.00</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/setup.png" alt="" />
+            <h3>Photoshoot set</h3>
+
+            <p class="price">$820.40</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/camera.png" alt="" />
+            <h3>Vlogging Camera</h3>
+
+            <p class="price">$1800.80</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/single-light.png" alt="" />
+            <h3>Green Screen</h3>
+
+            <p class="price">$25.48</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/action.png" alt="" />
+            <h3>Action Camera</h3>
+
+            <p class="price">$380.00</p>
+
+            <p class="rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <span>4.99</span>
+            </p>
+
+            <p class="detail">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+
+        <button>See More <i class="fa-solid fa-arrow-right"></i></button>
+      </section>
+
+      <section id="feature">
+        <img src="./images/gear.png" alt="" />
+        <div class="feature-detail">
+          <h1>Featured products at one place</h1>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <button>Join Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <h1>Influencer products</h1>
+        <p>Copyright © 2020 influencer products All rights reserved</p>
+        <div class="social">
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-solid fa-basketball"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
