Added all the code for base-version with responsiveness

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Influencer Gear</title>
 
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/responsive.css" />
 
     <link
       rel="stylesheet"
@@ -25,8 +26,9 @@
   <body class="poppins-thin-font">
     <header>
       <nav>
+        <div class="mobiles-icon"><i class="fa-solid fa-bars"></i></div>
         <h3>Influencer products</h3>
-
+        <div class="mobiles-icon"><i class="fa-solid fa-bag-shopping"></i></div>
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">Products</a></li>
