Added all the code for the web-site with some bug fixing

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <body class="poppins-thin-font">
     <header>
       <nav>
-        <div class="mobiles-icon"><i class="fa-solid fa-bars"></i></div>
+        <i class="mobiles-icon fa-solid fa-bars"></i>
         <h3>Influencer products</h3>
-        <div class="mobiles-icon"><i class="fa-solid fa-bag-shopping"></i></div>
+        <i class="mobiles-icon fa-solid fa-bag-shopping"></i>
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">Products</a></li>
